# follow-wall-k-bots

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yaml
include/follow_wall/: follow_wall.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/follow-wall/include/follow_wall/: follow_wall.hpp
install/follow-wall/lib/follow-wall/: follow_wall_main
install/follow-wall/share/ament_index/resource_index/package_run_dependencies/: follow-wall
install/follow-wall/share/ament_index/resource_index/parent_prefix_path/: follow-wall
install/follow-wall/share/follow-wall/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/follow-wall/share/follow-wall/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  follow-wallConfig-version.cmake  follow-wallConfig.cmake
install/follow-wall/share/follow-wall/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
log/: latest_build
practica1/: CMakeLists.txt  package.xml
practica1/src/: follow_wall.cpp
src/: follow_wall.cpp  follow_wall_main.cpp
src/follow_wall/: follow_wall.cpp
test/: node_test.cpp
